# traveller

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  DEVELOP.md  README.md  pyproject.toml
data/annual/: accommodation_categorization.csv  room_distribution.csv  tourism_accomodation_investments  urls_annual.txt
data/annual/hotel_categorization/: 2018_Q1_HC.csv  2018_Q2_HC.csv  2018_Q3_HC.csv  2018_Q4_HC_recheck.csv  2019_Q1_HC.csv  2019_Q2_HC.csv  2019_Q3_HC.csv  2019_Q4_HC.csv  2020_Q1_Q2_HC.csv  2020_Q3_Q4_HC.csv  2021_HC.csv  2022_HC.csv  2023_HC.csv  2024_Q1_Q2_HC.csv
data/arrival/: urls_2023.txt  urls_2024.txt  urls_all_countries.txt
data/arrival/2023/: 2023_January_Daily_Arrival.csv
data/arrival/all_countries/: all_country_arrivals_2019.csv  all_country_arrivals_2020.csv  all_country_arrivals_2021.csv  all_country_arrivals_2022.csv  all_country_arrivals_2023.csv  all_country_arrivals_2024.csv
examples/all_country/arrivals/: main.py
scripts/: download_tourism_data.sh
traveller/data/: loader.py  trend_analyzer.py
traveller/plot/: plotter.py
traveller_service/: .flake8  format.sh  manage.py  pyproject.toml
traveller_service/arrivals/: insert_data.py  models.py
traveller_service/arrivals/migrations/: 0001_initial.py
traveller_service/static/css/: styles.css
traveller_service/templates/allcountry_arrivals/: country_chart.html  index.html
traveller_service/touristats/: apps.py  insert_data.py  models.py  tests.py  views.py
traveller_service/touristats/management/commands/: allcountrystats_delete_data.py  allcountrystats_insert_data.py  check_db.py
traveller_service/touristats/migrations/: 0001_initial.py  0002_alter_allcountrystats_month_and_more.py
traveller_service/touristats/utils/: model_util.py
traveller_service/traveller_service/: asgi.py  env.example  settings.py  urls.py  wsgi.py
