[build-system]
# Define the build requirements and backend
requires = ["setuptools", "wheel"]  # Required packages to build the project
build-backend = "setuptools.build_meta"  # Build backend to use

[project]
# Project metadata
name = "traveller"  # The name of your project
version = "0.1.0"  # Project version
description = "A Python project for tracing tourism data."  # Short description
readme = "README.md"  # Path to the README file
requires-python = ">=3.9"  # Minimum Python version supported

# License information
license = { file = "LICENSE" }

# Keywords to help discover the package
keywords = ["analytics", "tourism"]

# Author and maintainer information
authors = [{ name = "Vibhatha Abeykoon", email = "vibhatha@gmail.com" }]
maintainers = [{ name = "Vibhatha Abeykoon", email = "vibhatha@gmail.com" }]

# Supported classifiers
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

# Runtime dependencies for your project
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.3",
  "pyarrow>=18.1.0"
]

# Optional dependencies for specific use cases
[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]  # Development dependencies
test = ["pytest", "coverage"]  # Testing dependencies

# Relevant URLs for your project
[project.urls]
Homepage = "https://github.com/vibhatha/traveller"
Source = "https://github.com/vibhatha/traveller"

# Command-line scripts (if applicable)
[project.scripts]
traveller = "traveller.cli:cli"

[tool.setuptools]
packages = { find = {} }
include-package-data = true